Move style properties to their own element within head

--- a/style.html
+++ b/style.html
@@ -2,9 +2,15 @@
 <html lang="en">
     <head>
         <title>Style</title>
+        <style>
+            h1 {
+                color: lawngreen;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color: lawngreen; text-align: center;">Welcome to my web page!</h1>
+        <h1>Welcome to my web page!</h1>
         Hello, world!
     </body>
 </html>
