--- a/style.html
+++ b/style.html
@@ -2,12 +2,7 @@
 <html lang="en">
     <head>
         <title>Style</title>
-        <style>
-            h1 {
-                color: lawngreen;
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Welcome to my web page!</h1>
