--- a/table.html
+++ b/table.html
@@ -2,6 +2,16 @@
 <html lang="en">
     <head>
         <title>Table</title>
+        <style>
+            table {
+                border-collapse: collapse;
+            }
+
+            td, th {
+                border: 1px solid black;
+                padding: 5px;
+            }
+        </style>
     </head>
     <body>
         <table>
