Add Sass to variables.html

--- a/variables.html
+++ b/variables.html
@@ -2,17 +2,7 @@
 <html lang="en">
     <head>
         <title>Variables</title>
-        <style>
-            ul {
-                font-size: 14px;
-                color: red;
-            }
-
-            ol {
-                font-size: 18px;
-                color: red;
-            }
-        </style>
+        <link rel="stylesheet" href="variables.css">
     </head>
     <body>
         <ul>
